implement users index page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
         <% if logged_in? %>
         <%# ログイン済みの場合 %>
         <li>
-          <%= link_to "Users", '#' %>
+          <%= link_to "Users", users_path %>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
