--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,9 @@
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+<% if logged_in? %>
 
-  <h2>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
+  <%= render 'static_pages/home_logged_in' %>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+<% else %>
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'https://rubyonrails.org/' %>
+  <%= render 'static_pages/home_not_logged_in' %>
+
+<% end %>
